--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Donate</a></li>
                     <li id="pc"><a href="11" id="12">See The Pups</a></li>
-                    <li id="mobile"><a href="11" id="12">The Pups</a></li>
+                    <li id="mobile"><a href="11" id="12">Pups</a></li>
                     <li id="pc"><a href="#">Information</a></li>
                     <li id="mobile"><a href="#">Info</a></li>
             </div>
