--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             </ul>
         </div>
-        <div id=box2 class="boxes">two</div>
+        <div id=box2 class="boxes">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio harum earum omnis voluptate, non doloremque aperiam aliquid numquam tempora quidem sit esse eos quasi, cumque ea ipsa maiores amet delectus.</div>
     </div>
 </body>
 </html>
