--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
             <ul class="main-menu">
                 <h1 class="h1c">Good Boys</h1>
                 <div class="links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Donate</a></li>
-                    <li id="pc"><a href="11" id="12">See The Pups</a></li>
-                    <li id="mobile"><a href="11" id="12">Pups</a></li>
-                    <li id="pc"><a href="#">Information</a></li>
-                    <li id="mobile"><a href="#">Info</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="donate.html">Donate</a></li>
+                    <li id="pc"><a href="pups.html" id="12">See The Pups</a></li>
+                    <li id="mobile"><a href="pups.html" id="12">Pups</a></li>
+                    <li id="pc"><a href="info.html">Information</a></li>
+                    <li id="mobile"><a href="info.html">Info</a></li>
             </div>
             </ul>
         </div>
-        <div id=box2 class="boxes">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio harum earum omnis voluptate, non doloremque aperiam aliquid numquam tempora quidem sit esse eos quasi, cumque ea ipsa maiores amet delectus.</div>
+        <div id=box2 class="boxes">Lorem, ipsum dolor sit amet coLorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio harum earum omnis voluptate, non doloremque aperiam alnsectetur adipisicing elit. Distinctio harum earum omnis voluptate, non doloremque aperiam alLorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio harum earum omnis voluptate, non doloremque aperiam aliqLorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio harum earum omnis voluptate, non doloremque aperiam aluid numquam tempora quidem sit esse eos quasi, cumque ea ipsa maiores amet delectus.</div>
     </div>
 </body>
 </html>
